// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter-selector Renders \`filter-selector\` with array value 1`] = `
<div
  class="v-input filter-selector mt-0 v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select v-select--is-multi"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          <span
            class="v-chip v-chip--no-color v-chip--removable theme--light v-size--small"
          >
            <span
              class="v-chip__content"
            >
      Filter 1
              <button
                aria-label="Close"
                class="v-icon notranslate v-chip__close v-icon--link v-icon--right material-icons theme--light"
                style="font-size: 18px;"
                type="button"
              >
                cancel
              </button>
            </span>
          </span>
          <input
            aria-readonly="false"
            autocomplete="off"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          type="hidden"
          value="3"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`filter-selector Renders \`filter-selector\` with array value 2`] = `undefined`;

exports[`filter-selector Renders \`filter-selector\` with badges 1`] = `
<div
  class="v-input filter-selector mt-0 theme--light v-text-field v-select"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          <input
            aria-readonly="false"
            autocomplete="off"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          type="hidden"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`filter-selector Renders \`filter-selector\` with badges 2`] = `undefined`;

exports[`filter-selector Renders \`filter-selector\` with custom props 1`] = `
<div
  class="v-input filter-selector mt-0 v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
  long="true"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label v-label--active theme--light"
          style="left: 0px; position: absolute;"
        >
          Custom label
        </label>
        <div
          class="v-select__selections"
        >
          <span
            class="v-chip v-chip--no-color v-chip--removable theme--light v-size--small"
          >
            <span
              class="v-chip__content"
            >
      Filter 1
              <button
                aria-label="Close"
                class="v-icon notranslate v-chip__close v-icon--link v-icon--right material-icons theme--light"
                style="font-size: 18px;"
                type="button"
              >
                cancel
              </button>
            </span>
          </span>
          <input
            aria-readonly="false"
            autocomplete="off"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          type="hidden"
          value="3"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`filter-selector Renders \`filter-selector\` with custom props 2`] = `undefined`;

exports[`filter-selector Renders \`filter-selector\` with custom props 2 1`] = `
<div
  class="v-input filter-selector mt-0 v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          <span
            class="v-chip v-chip--no-color theme--light v-size--small"
          >
            <span
              class="v-chip__content"
            >
      Filter 1
            </span>
          </span>
          <input
            aria-readonly="false"
            autocomplete="off"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          type="hidden"
          value="3"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`filter-selector Renders \`filter-selector\` with custom props 2 2`] = `undefined`;

exports[`filter-selector Renders \`filter-selector\` with default props 1`] = `
<div
  class="v-input filter-selector mt-0 theme--light v-text-field v-select"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          <input
            aria-readonly="false"
            autocomplete="off"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          type="hidden"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`filter-selector Renders \`filter-selector\` with default props 2`] = `undefined`;
